--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,10 +19,12 @@ jobs:
           - os: ubuntu-latest
             rid: linux-x64
             framework: net8.0
+            configuration: Release
             output: publish/linux
           - os: windows-latest
             rid: win-x64
             framework: net8.0-windows8.0
+            configuration: Release-Windows
             output: publish/windows
 
     runs-on: ${{ matrix.os }}
@@ -39,7 +41,7 @@ jobs:
         run: dotnet restore src/Win2Mqtt/Win2Mqtt.csproj
 
       - name: Publish
-        run: dotnet publish src/Win2Mqtt/Win2Mqtt.csproj --configuration Release --framework ${{ matrix.framework }} --runtime ${{ matrix.rid }} --self-contained --output ${{ matrix.output }}
+        run: dotnet publish src/Win2Mqtt/Win2Mqtt.csproj --configuration ${{ matrix.configuration }} --framework ${{ matrix.framework }} --runtime ${{ matrix.rid }} --self-contained --output ${{ matrix.output }}
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
