--- a/src/Win2Mqtt.SystemActions.Windows/Win2Mqtt.SystemActions.Windows.csproj
+++ b/src/Win2Mqtt.SystemActions.Windows/Win2Mqtt.SystemActions.Windows.csproj
@@ -5,6 +5,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <Configurations>Debug;Release</Configurations>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.3" />
