--- a/src/Win2Mqtt.SystemActions.Windows/Win2Mqtt.SystemActions.Windows.csproj
+++ b/src/Win2Mqtt.SystemActions.Windows/Win2Mqtt.SystemActions.Windows.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.3" />
         <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.1" />
+        <PackageReference Include="Scrutor" Version="6.0.1" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\Win2Mqtt.Common\Win2Mqtt.Common.csproj" />
