Add a setup project and build during release

--- a/.github/workflows/dotnet-release.yml
+++ b/.github/workflows/dotnet-release.yml
@@ -62,12 +62,30 @@ jobs:
         cd ${{ matrix.output }}
         Compress-Archive -Path * -DestinationPath ..\..\win2mqtt-${{ matrix.os }}.zip
 
+    - name: Install Inno Setup on Windows
+      if: matrix.os == 'windows-latest' && startsWith(github.ref, 'refs/tags/v')
+      run: |
+        Invoke-WebRequest -Uri https://jrsoftware.org/download.php/is.exe -OutFile is.exe
+        Start-Process -FilePath is.exe -ArgumentList "/VERYSILENT" -Wait
+
+    - name: Build Setup Script
+      if: matrix.os == 'windows-latest' && startsWith(github.ref, 'refs/tags/v')
+      run: |
+        & "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" setup\Win2MqttInstaller.iss /DMyAppVersion=${{ github.ref_name }}
+
     - name: Upload compressed artifact (only on tag)
       if: startsWith(github.ref, 'refs/tags/v')
       uses: actions/upload-artifact@v4
       with:
         name: win2mqtt-${{ matrix.os }}.${{ matrix.os == 'ubuntu-latest' && 'tar.gz' || 'zip' }}
         path: win2mqtt-${{ matrix.os }}.${{ matrix.os == 'ubuntu-latest' && 'tar.gz' || 'zip' }}
+
+    - name: Upload installer exe (only on tag)
+      if: matrix.os == 'windows-latest' && startsWith(github.ref, 'refs/tags/v')
+      uses: actions/upload-artifact@v4
+      with:
+        name: Win2MqttSetup.exe
+        path: publish/setup/Win2MqttSetup.exe
 
   release:
     if: startsWith(github.ref, 'refs/tags/v')
@@ -86,5 +104,6 @@ jobs:
         files: |
           artifacts/win2mqtt-ubuntu-latest.tar.gz/win2mqtt-ubuntu-latest.tar.gz
           artifacts/win2mqtt-windows-latest.zip/win2mqtt-windows-latest.zip
+          artifacts/Win2MqttSetup.exe/Win2MqttSetup.exe
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
