--- a/setup/linux/win2mqtt.appsettings.template.json
+++ b/setup/linux/win2mqtt.appsettings.template.json
@@ -28,16 +28,16 @@
         },
         "MultiSensors": {
             "Drives": {
-                "enabled": true,
+                "enabled": false,
                 "Sensors": {
                     "DriveFreeSize": {
-                        "enabled": true
+                        "enabled": false
                     },
                     "DrivePercentFreeSize": {
-                        "enabled": true
+                        "enabled": false
                     },
                     "DriveTotalSize": {
-                        "enabled": true
+                        "enabled": false
                     }
                 }
             }
@@ -45,19 +45,19 @@
         "Listeners": {
             "Hibernate": {
                 "Topic": "hibernate",
-                "Enabled": true
+                "Enabled": false
             },
             "Reboot": {
                 "Topic": "reboot",
-                "Enabled": true
+                "Enabled": false
             },
             "Shutdown": {
                 "Topic": "shutdown",
-                "Enabled": true
+                "Enabled": false
             },
             "Suspend": {
                 "Topic": "suspend",
-                "Enabled": true
+                "Enabled": false
             },
             "SendNotification": {
                 "Topic": "sendnotification",
@@ -69,7 +69,7 @@
             },
             "KillProcess": {
                 "Topic": "killprocess",
-                "Enabled": true
+                "Enabled": false
             },
             "GetProcesses": {
                 "Topic": "getprocesses",
