--- a/.github/workflows/dotnet-release.yml
+++ b/.github/workflows/dotnet-release.yml
@@ -55,10 +55,7 @@ jobs:
       run: |
         mkdir -p dist/win2mqtt
         cp -r ${{ matrix.output }}/* dist/win2mqtt/
-        cp ./setup/linux/install.sh dist/win2mqtt/
-        cp ./setup/linux/win2mqtt.service dist/win2mqtt/
-        cp ./setup/linux/win2mqtt.appsettings.example.json dist/win2mqtt/
-        cp ./setup/linux/README.md dist/win2mqtt/
+        cp -r ./setup/linux/* dist/win2mqtt/
 
     - name: Compress artifacts on Linux
       if: matrix.os == 'ubuntu-latest' && startsWith(github.ref, 'refs/tags/v')
