Refactor of SystemSensors

--- a/src/Win2Mqtt/appsettings.json
+++ b/src/Win2Mqtt/appsettings.json
@@ -39,6 +39,7 @@
     "MultiSensors": {
       "Drives": {
         "enabled": true,
+        "topic": "drives",
         "Sensors": {
           "DriveFreeSize": {
             "enabled": true
