--- a/src/Win2Mqtt/appsettings.json
+++ b/src/Win2Mqtt/appsettings.json
@@ -15,7 +15,7 @@
       "Username": "win2mqtt",
       "Password": "win2mqtt"
     },
-    "DeviceIdentifier": "DESKTOP-GONT7DL",
+    "DeviceIdentifier": "testapp",
     "MqttTopicQoS": 1,
     "TimerInterval": 5,
     "EnableNotifications": false,
