--- a/src/Win2Mqtt.SystemSensors/Win2Mqtt.SystemSensors.csproj
+++ b/src/Win2Mqtt.SystemSensors/Win2Mqtt.SystemSensors.csproj
@@ -9,7 +9,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.3" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.3" />
 		<PackageReference Include="Microsoft.Extensions.Options" Version="8.0.1" />
 		<PackageReference Include="Scrutor" Version="6.0.1" />
 		<PackageReference Include="System.Diagnostics.PerformanceCounter" Version="8.0.1" />
