--- a/src/Win2Mqtt.Common/Win2Mqtt.Common.csproj
+++ b/src/Win2Mqtt.Common/Win2Mqtt.Common.csproj
@@ -8,9 +8,9 @@
 		<Configurations>Debug;Release</Configurations>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
 		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" Version="8.0.0" />
-
+        <PackageReference Include="Scrutor" Version="6.0.1" />
 	</ItemGroup>
 </Project>
