Mega refactor of Actions

--- a/src/Win2Mqtt/appsettings.json
+++ b/src/Win2Mqtt/appsettings.json
@@ -37,7 +37,7 @@
       }
     },
     "MultiSensors": {
-      "Drives": {
+      "Drive": {
         "enabled": true,
         "topic": "drives",
         "Sensors": {
