--- a/setup/windows/win2mqtt.appsettings.template.json
+++ b/setup/windows/win2mqtt.appsettings.template.json
@@ -27,7 +27,7 @@
             }
         },
         "MultiSensors": {
-            "Drives": {
+            "Drive": {
                 "enabled": true,
                 "Sensors": {
                     "DriveFreeSize": {
