Feature/actions discovery messages (#22)
* MQTT publisher log Trace instead of Debug

* Add IActionFactory, ActionFactory

* Add metadata to IMqttActionHandlerMarker
Add abstract types MqttActionHandler,MqttActionHandler<T>

* Make handlers inherit from abstract types

* Working processing of messages using ActionFactory

* Rename folder SystemMetrics to SystemSensors

* Rename most of Sensor and Action to SystemSensor and SystemAction

* move multi and child sensors to a folder

* Simplify sensors registration (missing multi-sensors, though)

* Refactor of SystemSensors

* Polish SystemSensorFactory

* Rename solution folders System[Actions|Sensors]

* Make multi-sensors take care of their own registrations

* Register child sensors

* Simplify further registrations

* Mega refactor of Actions

* Update template settings in setup

* Don't need SystemSensorMetadata Metadata in MultiSensors

* Simplify further SystemSensorFactory

---------

Co-authored-by: Fernando Arias <fernando.arias@sembo.se>

--- a/src/Win2Mqtt/appsettings.json
+++ b/src/Win2Mqtt/appsettings.json
@@ -15,7 +15,7 @@
       "Username": "win2mqtt",
       "Password": "win2mqtt"
     },
-    "DeviceIdentifier": "DESKTOP-GONT7DL",
+    "DeviceIdentifier": "testapp",
     "MqttTopicQoS": 1,
     "TimerInterval": 5,
     "EnableNotifications": false,
@@ -37,8 +37,9 @@
       }
     },
     "MultiSensors": {
-      "Drives": {
+      "Drive": {
         "enabled": true,
+        "topic": "drives",
         "Sensors": {
           "DriveFreeSize": {
             "enabled": true
