--- a/src/Samqtt.Application/Samqtt.Application.csproj
+++ b/src/Samqtt.Application/Samqtt.Application.csproj
@@ -12,9 +12,9 @@
   </ItemGroup>
   
   <ItemGroup>
-    <ProjectReference Include="..\Win2Mqtt.Common\Win2Mqtt.Common.csproj" />
-    <ProjectReference Include="..\Win2Mqtt.Broker.Mqtt2Net\Win2Mqtt.Broker.MQTTNet.csproj" />
-    <ProjectReference Include="..\Win2Mqtt.HomeAssistant\Win2Mqtt.HomeAssistant.csproj" />
+    <ProjectReference Include="..\Samqtt.Common\Samqtt.Common.csproj" />
+    <ProjectReference Include="..\Samqtt.Broker.Mqtt2Net\Samqtt.Broker.MQTTNet.csproj" />
+    <ProjectReference Include="..\Samqtt.HomeAssistant\Samqtt.HomeAssistant.csproj" />
   </ItemGroup>
 
 </Project>
