--- a/src/Samqtt.Broker.Mqtt2Net/Samqtt.Broker.MQTTNet.csproj
+++ b/src/Samqtt.Broker.Mqtt2Net/Samqtt.Broker.MQTTNet.csproj
@@ -8,12 +8,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="MQTTnet" Version="5.0.1.1416" />
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.3" />
         <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.1" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Win2Mqtt.Common\Win2Mqtt.Common.csproj" />
+      <ProjectReference Include="..\Samqtt.Common\Samqtt.Common.csproj" />
     </ItemGroup>
-
 </Project>
