--- a/src/Samqtt.HomeAssistant/Samqtt.HomeAssistant.csproj
+++ b/src/Samqtt.HomeAssistant/Samqtt.HomeAssistant.csproj
@@ -6,14 +6,14 @@
         <Nullable>enable</Nullable>
         <Configurations>Debug;Release</Configurations>
     </PropertyGroup>
-    
+
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.3" />
         <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.1" />
-        <PackageReference Include="Scrutor" Version="6.0.1" />
     </ItemGroup>
+
     <ItemGroup>
-      <ProjectReference Include="..\Win2Mqtt.Common\Win2Mqtt.Common.csproj" />
+        <ProjectReference Include="..\Samqtt.Common\Samqtt.Common.csproj" />
     </ItemGroup>
 
 </Project>
