--- a/src/Samqtt.SystemActions.Windows/Samqtt.SystemActions.Windows.csproj
+++ b/src/Samqtt.SystemActions.Windows/Samqtt.SystemActions.Windows.csproj
@@ -13,7 +13,7 @@
         <PackageReference Include="Scrutor" Version="6.0.1" />
     </ItemGroup>
     <ItemGroup>
-      <ProjectReference Include="..\Win2Mqtt.Common\Win2Mqtt.Common.csproj" />
+      <ProjectReference Include="..\Samqtt.Common\Samqtt.Common.csproj" />
     </ItemGroup>
 
 </Project>
