--- a/src/Samqtt.SystemSensors/Samqtt.SystemSensors.csproj
+++ b/src/Samqtt.SystemSensors/Samqtt.SystemSensors.csproj
@@ -17,6 +17,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Win2Mqtt.Common\Win2Mqtt.Common.csproj" />
+		<ProjectReference Include="..\Samqtt.Common\Samqtt.Common.csproj" />
 	</ItemGroup>
 </Project>
