--- a/setup/linux/samqtt.appsettings.template.json
+++ b/setup/linux/samqtt.appsettings.template.json
@@ -1,5 +1,5 @@
 {
-    "Win2MQTT": {
+    "SAMQTT": {
         "Broker": {
             "Server": "{{MQTT_SERVER}}",
             "Port": {{MQTT_PORT}},
