--- a/src/Samqtt/Properties/launchSettings.json
+++ b/src/Samqtt/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "Win2Mqtt.Service": {
+    "SAMQTT": {
       "commandName": "Project",
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development"
