--- a/src/Samqtt/appsettings.json
+++ b/src/Samqtt/appsettings.json
@@ -8,12 +8,12 @@
       }
     }
   },
-  "Win2MQTT": {
+  "SAMQTT": {
     "Broker": {
       "Server": "192.168.1.4",
       "Port": 1883,
-      "Username": "win2mqtt",
-      "Password": "win2mqtt"
+      "Username": "",
+      "Password": ""
     },
     "DeviceIdentifier": "testapp",
     "MqttTopicQoS": 1,
