--- a/setup/windows/samqtt.appsettings.template.json
+++ b/setup/windows/samqtt.appsettings.template.json
@@ -1,5 +1,5 @@
 {
-    "Win2MQTT": {
+    "Samqtt": {
         "Broker": {
             "Server": "{{MQTT_SERVER}}",
             "Port": {{MQTT_PORT}},
